# TEM-Simulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  TEM-simulator.c  array.c  array.h  detector.c  detector.h  electronbeam.c  electronbeam.h  functions.c  functions.h  geometry.c  geometry.h  input.c  input.h  log.c  log.h  macros.h  matrix.c  matrix.h  misc.c  misc.h  mrc.c  mrc.h  optics.c  optics.h  particle.c  particle.h  particleset.c  particleset.h  pdb.c  pdb.h  random.c  random.h  sample.c  sample.h  simulation.c  simulation.h  structs.h  volume.c  volume.h  (+2 more)
tests/: input.txt
